# taglib

./: .gitignore  .travis.yml  CMakeLists.txt  ConfigureChecks.cmake  config.h.cmake  taglib-config.cmake  taglib-config.cmd.cmake  taglib.pc.cmake
bindings/c/: CMakeLists.txt  taglib_c.pc.cmake
cmake/modules/: FindCppUnit.cmake
examples/: CMakeLists.txt
projects/VS2017/taglib/taglib/: stdafx.cpp  stdafx.h  taglib.vcxproj  taglib.vcxproj.filters
taglib/: CMakeLists.txt  audioproperties.cpp  audioproperties.h  fileref.cpp  fileref.h  tagunion.cpp  tagutils.cpp
taglib/ape/: apefile.cpp  apefile.h  apefooter.cpp  apeitem.cpp  apeproperties.cpp  apeproperties.h
taglib/asf/: asfattribute.cpp  asffile.cpp  asffile.h  asfpicture.cpp
taglib/dsf/: dsffile.cpp  dsffile.h
taglib/ebml/: ebmlelement.cpp
taglib/flac/: flacfile.cpp  flacfile.h  flacmetadatablock.cpp  flacpicture.cpp  flacproperties.h  flacunknownmetadatablock.cpp
taglib/it/: itfile.cpp  itfile.h  itproperties.cpp  itproperties.h
taglib/mod/: modfile.cpp  modfile.h  modfilebase.h  modproperties.cpp  modproperties.h
taglib/mp4/: mp4atom.cpp  mp4coverart.cpp  mp4file.cpp  mp4file.h  mp4item.cpp  mp4properties.h  mp4tag.cpp
taglib/mpc/: mpcfile.cpp  mpcfile.h  mpcproperties.cpp  mpcproperties.h
taglib/mpeg/: mpegfile.cpp  mpegfile.h  mpegheader.cpp  mpegproperties.cpp  mpegproperties.h
taglib/mpeg/id3v2/: id3v2extendedheader.h  id3v2synchdata.h
taglib/ogg/: oggpageheader.cpp  xiphcomment.cpp  xiphcomment.h
taglib/ogg/flac/: oggflacfile.cpp  oggflacfile.h
taglib/ogg/opus/: opusfile.cpp  opusfile.h  opusproperties.cpp  opusproperties.h
taglib/ogg/speex/: speexfile.cpp  speexfile.h  speexproperties.cpp  speexproperties.h
taglib/ogg/vorbis/: vorbisfile.cpp  vorbisfile.h  vorbisproperties.cpp  vorbisproperties.h
taglib/riff/: rifffile.cpp  rifffile.h
taglib/riff/aiff/: aifffile.cpp  aifffile.h  aiffproperties.h
taglib/riff/wav/: wavfile.cpp  wavfile.h  wavproperties.h
taglib/s3m/: s3mfile.cpp  s3mfile.h  s3mproperties.cpp  s3mproperties.h
taglib/toolkit/: tbytevector.cpp  tbytevector.h  tbytevectorstream.cpp  tbytevectorstream.h  tfile.cpp  tfile.h  tfilestream.cpp  tfilestream.h  tiostream.cpp  tiostream.h  tlist.h  tmap.h  tpicture.cpp  trefcounter.cpp  trefcounter.h  tstring.cpp  tutils.h
taglib/trueaudio/: trueaudiofile.cpp  trueaudiofile.h  trueaudioproperties.h
taglib/wavpack/: wavpackfile.cpp  wavpackfile.h  wavpackproperties.h
taglib/xm/: xmfile.cpp  xmfile.h  xmproperties.cpp  xmproperties.h
tests/: CMakeLists.txt  main.cpp  test_aiff.cpp  test_bytevectorstream.cpp  test_file.cpp  test_fileref.cpp  test_oggflac.cpp  test_smartptr.cpp  test_synchdata.cpp
